tdf#142130 sw track changes: fix crossing out of neighboring images

Normal images got crossing out from the next deleted images.
Fix it by using only the start position of the image in CheckLine()
instead of the 1-character length range of the anchor point.

Note: add unit test also for tdf#78864.

Follow-up to commit d845b91bcc6eb885c55494d4d4fab4ec09577e1d
(tdf#78864 sw track changes: cross out deleted images).

Change-Id: I8894e625d479adea4b1003f55f24f292064ed7ba
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115255
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit b11287cda0ce308f5fddac4c0877718fec7c70a5)